# CRUD

./: README.md  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  nodels.py  router.py  schemas.py
frontend/: Dockerfile  app.py
