[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Paulo Aguiar <aguiarlapaulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
